--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -40,7 +40,7 @@
 \setcounter{tocdepth}{4} 
 \setcounter{secnumdepth}{4}
 
-\author{Matthias Kemmer, Julius Hackel, Markus Bullmann, Stefan Gerasch}
+\author{Julius Hackel, Markus Bullmann, Matthias Kemmer, Stefan Gerasch}
 \title{Gliederung Vertiefungsseminar MI}
 \begin{document}
 
