--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -19,7 +19,7 @@ Bei der äußeren Sinusfunktion handelt es sich um das Trägersignal, welches in
   \includegraphics[width=0.95\textwidth,frame]{Prinzip.png}
 \caption{Vergleich Träger/Modulator}
 \label{fig:vergleichSignale}
-Quelle: Eigene Darstellung mit Matlab
+Quelle: Eigene Darstellung mit MATLAB
 \end{figure}
 
 Die Frequenzmodulationssynthese ist in ihren Grundzügen recht einfach zu verstehen und man kann mit geringem Aufwand bereits sehr komplexe, wenn auch oft unkontrollierbare Signale mit komplexen Klangspektren (bzw. Frequenzspektren) erzeugen. Wie sich im Folgenden jedoch noch herausstellen wird, ist es dagegen sehr schwierig und erfordert viel Zeit und Aufwand durch die FM-Synthese gezielt Signale zu erzeugen und diese zu kontrollieren.
@@ -28,7 +28,7 @@ Praktisch gesehen kann die Frequenzmodulationssynthese dazu verwendet werden, um
 
 \FloatBarrier
 \subsection{Beispiele}
-In diesem Kapitel werden einige konkrete Beispiele der FM-Synthese anhand von Träger- und Modulationsfunktion sowie der daraus resultierenden Funktion aufgezeigt. Die Grafiken zeigen jeweils Plots von allen drei Signalen, welche mit Matlab erzeugt wurden.
+In diesem Kapitel werden einige konkrete Beispiele der FM-Synthese anhand von Träger- und Modulationsfunktion sowie der daraus resultierenden Funktion aufgezeigt. Die Grafiken zeigen jeweils Plots von allen drei Signalen, welche mit MATLAB erzeugt wurden.
 Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen der vom menschlichen Ohr wargenommen werden kann. (Siehe Unterkapitel \textbf{``\ref{bulli:ohrToeneUndFrequenzen} - \nameref{bulli:ohrToeneUndFrequenzen}''}).
 
 \begin{figure} [ht]
@@ -36,7 +36,7 @@ Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem F
   \includegraphics[width=0.95\textwidth,frame]{Beispiel1.png}
 \caption{Beispiel 1}
 \label{fig:beispiel1}
-Quelle: Eigene Darstellung mit Matlab
+Quelle: Eigene Darstellung mit MATLAB
 \end{figure}
 
 In Beispiel 1 (siehe \textbf{Abbildung \ref{fig:beispiel1}})  wurden folgende Signale verwendet:
@@ -54,7 +54,7 @@ Konkrete Bedeutung der Werte: Die Trägerfrequenz von 600 Hz bedeutet, dass die 
   \includegraphics[width=0.95\textwidth,frame]{Beispiel2.png}
 \caption{Beispiel 2}
 \label{fig:beispiel2}
-Quelle: Eigene Darstellung mit Matlab
+Quelle: Eigene Darstellung mit MATLAB
 \end{figure}
 
 Das zweite Beispiel in \textbf{Abbildung \ref{fig:beispiel2}} zeigt eine Frequenzmodulation, bei der sich auch die Amplitude des Signals ändert. Dies geschieht rein durch die Phasenverschiebung des äußeren Sinus durch den Modulator, die tatsächliche Amplitude der Funktion bleibt dabei unangetastet. Der Träger hat in diesem Beispiel eine Frequenz von 300 Hz, der Modulator 120 Hz. Der Modulationsindex beträgt wieder 5. Die Formel des Modulierten Signals sieht wie folgt aus:
@@ -88,7 +88,7 @@ Quelle: \url{ http://arts.mit.edu/wp-content/uploads/2014/07/ChowningYamaha.jpg}
  
 Chowning war, wie auch seine Kollegen, eher Komponist statt Erfinder. Aus diesem Grund waren sie mehr an der musikalischen Seite der Erfindung interessiert als an kommerziellem Erfolg. Obwohl er das Potenzial seiner Erfindung zu dieser Zeit noch nicht überblicken konnte, wendete sich Chowning an das OTL (Office of Technology Licensing) in Stanford. Er hoffte, dass es in der Musikindustrie eine sinnvolle Anwendung seiner Entdeckung gab.\cite[S. 42]{soundofinnovation}
 
- Seine neue Entdeckung war jedoch zu Beginn nicht sehr angesehen und auch viele der Firmen, welchen das neue Patent angeboten wurde, wussten nichts damit anzufangen und lehnten ab. Andy Moorer, ein Kollege Chownings in Stanford und später Mitgründer des CCRMA, sagte dazu: 
+ Seine neue Entdeckung war jedoch zu Beginn nicht sehr angesehen und viele der Firmen, welchen das neue Patent angeboten wurde, wussten nichts damit anzufangen und lehnten ab. Andy Moorer, ein Kollege Chownings in Stanford und später Mitgründer des CCRMA, sagte dazu: 
 
 \textit{``[...] It was really discouraging. John was so proud of having put this damn thing together and people didn't really get he idea of spatializing the sound.''}\cite[S. 43]{soundofinnovation}
 
