--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -8,7 +8,7 @@ Die bisherige Darstellung der Soundsynthese durch Frequenzmodulation (FM) hat si
 
 Zur Vollständigkeit soll die simpelste Erweiterung der einfachen FM nicht unerwähnt bleiben, und zwar die Situation zweier paralleler Träger, denen je ein eigener Modulator zugeordnet ist (Abb 1). Dabei handelt es sich streng genommen noch um keine komplexe FM, da die Signalpfade beider Träger erst auf der Ebene des Gesamtausgangssignals gemischt werden und sich ansonsten nicht weiter beeinflussen. Jedes Träger-Modulator-Paar, also T1 mit M1 sowie T2 mit M2, folgt für sich genommen den Prinzipien der einfachen FM, so dass für jedes Paar die Lage der Seitenfrequenzbänder gesondert bestimmt und addiert werden kann. Lage und Amplitude der Seitenfrequenzbänder folgen direkt aus der gewählten Funktion für die Frequenzmodulation, auch wenn die Herleitung nichttrivial ist und Kenntnis der Eigenschaften der sogenannten \textit{Besselfunktion} voraussetzt. Alle Spektren und Wellenformen in Kapitel 3 dieser Seminararbeit wurden auf Basis folgender Funktion für die FM modelliert:
 \label{matze:simplefm}
-\begin{equation}\label{eq:SimpleFM}
+\begin{equation} \label{eq:SimpleFM}
 f_{FM}(t) = \sin(w_ct + I\sin(w_mt)) \quad \text{mit} \quad w_ct \quad \text{als Träger-} \quad \text{und} \quad w_mt \quad \text{als Modulationsfreq.}
 \end{equation}
 Expandiert man diese über das trigonometrische Additionstheorem \begin{math} \sin(a + b) = \sin(a)\cos(b)+\cos(a)\sin(b) \end{math}, so erhält man 
@@ -25,16 +25,16 @@ Die inneren Terme \begin{math} \cos(I\sin(w_mt)) \end{math} und \begin{math} \si
 Eingesetzt in \ref{eq:BesselZwischenform} können alle auftretende Terme der Form \begin{math} \sin(w_ct)\cos(2nw_mt) \end{math} über das Additionstheorem \begin{math} \sin(a)\cos(b) = \frac{1}{2}\left(\sin(x+y)+\sin(x-y)\right) \end{math} sowie alle Terme \begin{math} \cos(w_ct)\sin((2n+1)w_mt) \end{math} über  \begin{math} \cos(a)\sin(b) = \frac{1}{2}\left(\sin(x+y)-\sin(x-y)\right) \end{math} expandiert werden, so dass letztlich gilt (CHOW2): 
 \begin{equation}
 \begin{split}
-\sin(w_ct + I\sin(w_mt)) \\ &\quad = J_0(I)\sin(w_ct) \\ &\quad + J_1(I)\left(\sin(w_ct + w_mt) - \sin(w_ct - w_mt)\right) \\ &\quad + J_2(I)\left(\sin(w_ct + 2w_mt)+\sin(w_ct-2w_mt)\right) \\ &\quad  + J_3(I)\left(\sin(w_ct + 3w_mt) - \sin(w_ct - 3w_mt)\right) \\ &\quad  + ...
+\sin(w_ct + I\sin(w_mt)) \\ &\quad = J_0(I)\sin(w_ct) \\ &\quad + J_1(I)(\sin(w_ct + w_mt) - \sin(w_ct - w_mt)) \\ &\quad + J_2(I)(\sin(w_ct + 2w_mt)+\sin(w_ct-2w_mt)) \\ &\quad  + J_3(I)(\sin(w_ct + 3w_mt) - \sin(w_ct - 3w_mt)) \\ &\quad  + ...
 \end{split}
 \end{equation}
 Zieht man die Besselkoeffizienten in die Klammer, so sieht man exakt, wie das Frequenzspektrum liegen muss:
 \begin{equation}\label{eq:FormelinchenBessel}
 \begin{split}
-\sin(w_ct + I\sin(w_mt)) \\ &\quad = J_0(I)\sin(w_ct) \\ &\quad + J_1(I)\sin(w_ct + w_mt) \quad\enspace - J_1(I)\sin(w_ct - w_mt) \\ &\quad + J_2(I)\sin(w_ct + 2w_mt) \quad + J_2(I)\sin(w_ct-2w_mt)\right) \\ &\quad  + J_3(I)\sin(w_ct + 3w_mt) \quad - J_3(I)\sin(w_ct - 3w_mt) \\ &\quad  + ...
+\sin(w_ct + I\sin(w_mt)) \\ &\quad = J_0(I)\sin(w_ct) \\ &\quad + J_1(I)\sin(w_ct + w_mt) \quad\enspace - J_1(I)\sin(w_ct - w_mt) \\ &\quad + J_2(I)\sin(w_ct + 2w_mt) \quad + J_2(I)\sin(w_ct-2w_mt) \\ &\quad  + J_3(I)\sin(w_ct + 3w_mt) \quad - J_3(I)\sin(w_ct - 3w_mt) \\ &\quad  + ...
 \end{split}
 \end{equation}
-Die erste Zeile zeigt nun die Lage des Basisfrequenzbandes an, während jede folgende Zeile stets die Lage des Seitenfrequenzbands im positiven Bereich angibt (erster Term) sowie das dazugehörige Seitenfrequenzband im negativen Bereich (zweiter Term). Man sieht in dieser Darstellung am Vorzeichen des jeweiligen Terms auch sehr schön, dass ungerade Besselkoeffizienten zu negativen Amplitudenwerten des jeweiligen negativen Seitenfrequenzbandes führt. Da negative Frequenzen einer Phasenverschiebung um 180° entsprechen, ist zu beachten, dass die endgültigen, akustisch wahrgenommenen Frequenzen bekommt, wenn alle negativen Frequenzen einmal je an X- und Y-Achse gespiegelt werden.
+Die erste Zeile zeigt nun die Lage des Basisfrequenzbandes an, während jede folgende Zeile stets die Lage des Seitenfrequenzbands im positiven Bereich angibt (erster Term) sowie das dazugehörige Seitenfrequenzband im negativen Bereich (zweiter Term). Man sieht in dieser Darstellung am Vorzeichen des jeweiligen Terms auch sehr schön, dass ungerade Besselkoeffizienten zu negativen Amplitudenwerten des jeweiligen negativen Seitenfrequenzbandes führt. Da negative Frequenzen einer Phasenverschiebung um 180 Grad entsprechen, ist zu beachten, dass die endgültigen, akustisch wahrgenommenen Frequenzen bekommt, wenn alle negativen Frequenzen einmal je an X- und Y-Achse gespiegelt werden.
 Die Formel \ref{eq:FormelinchenBessel} kann übersichtlich zusammengefasst werden zu (KREH)
 \begin{equation}\label{esq:Besselbabymonster}
 \sin(w_ct + I\sin(w_mt)) = \sum_{n=-\infty}^{\infty}J_n(I)\sin(w_ct+nw_mt)
@@ -65,7 +65,7 @@ Nach mehrmaliger Anwendung der trigonometrischen Additionstheoreme zeigt sich im
 \end{split}
 \end{equation}
 Substituiert man auch hier jedes \begin{math} \sin(I\sin(w_{mx}t) \end{math} mit \ref{eq:Besselsin} und \begin{math} \cos(I\sin(w_{mx}t)) \end{math}) mit \ref{eq:Besselcos} und wendet erneut die trigonometrischen Additionstheoreme an, so ergibt sich übersichtlich:
-\begin{equation}\label{
+\begin{equation}\label{eq:ParallelKompakt}
 \sin(w_ct + I_1\sin(w_{m1}t) + I\sin(w_{m2}t)) = \sum_{i=-\infty}^{\infty}\sum_{k=-\infty}^{\infty}J_i(I_1)J_k(I_2)\sin(w_ct + iw_{m1}t + kw_{m2}t)
 \end{equation}
 Das bedeutet, dass bereits für alle Kombinationen der Indizes von -2 bis +2 ganze 25 verschiedene Terme (16 für die Kombinationsmöglichkeiten von 1 und 2 sowie den Vorzeichen + und -; weitere 9 für die Kombinationen von 1 und 0 sowie 2 und 0 inklusive der beiden Vorzeichen sowie die Kombination von 0 mit sich selbst) und somit individuelle Frequenzbänder entstehen. Die entsprechenden Additionsterme sind wie folgt:
@@ -108,3 +108,4 @@ Die bisher betrachteten Schaltungen war gemein, dass unabhängig davon, ob ein T
 
 
 \subsubsection{ADSR-Hüllkurven-Generator 0,5 S}
+\
